improve index forSEO

--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite App</title>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="description" content="E-Library is an online platform providing free and easy access to educational books.">
+    <meta name="keywords" content="E-Library, free books, educational books, online library, student resources">
+    <meta name="author" content="Rudranil Das">
+    <meta name="robots" content="index, follow">  <!-- Ensures Google indexes your site -->
+    <title>E-Library - Free Online Educational Books</title>
+</head>
+
 </head>
 <body>
   <div id="root"></div>
