--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <head>
+    <meta name="google-site-verification" content="1ogH5MIYAsM_TTLz1GSNzDCsxzfpKFCxCIDDdn9-vns" />
     <meta charset="UTF-8">
     <meta name="description" content="E-Library is an online platform providing free and easy access to educational books.">
     <meta name="keywords" content="E-Library, free books, educational books, online library, student resources">
