--- a/index.html
+++ b/index.html
@@ -1,18 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
+    <!-- SEO Meta Tags -->
     <meta name="description" content="E-Library is an online platform providing free and easy access to educational books.">
     <meta name="keywords" content="E-Library, free books, educational books, online library, student resources">
     <meta name="author" content="Rudranil Das">
-    <meta name="robots" content="index, follow">  <!-- Ensures Google indexes your site -->
+    <meta name="robots" content="index, follow">
+    
+    <!-- Open Graph Meta Tags (for Social Media Sharing) -->
+    <meta property="og:title" content="E-Library - Free Online Educational Books">
+    <meta property="og:description" content="E-Library is an online platform providing free and easy access to educational books.">
+    <meta property="og:image" content="http://e-library-peach.vercel.app/og-image.jpg"> <!-- Replace this URL with your actual image -->
+    <meta property="og:url" content="http://e-library-peach.vercel.app">
+    <meta property="og:type" content="website">
+
+    <!-- Language and Encoding -->
+    <meta http-equiv="Content-Language" content="en">
+    <meta charset="UTF-8">
+
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
+    <!-- Title -->
     <title>E-Library - Free Online Educational Books</title>
-
-
 </head>
 <body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
 </body>
 </html>
